--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -78,6 +78,14 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "wagmi": {
+      "viem": "$viem"
+    },
+    "@wagmi/core": {
+      "viem": "$viem"
+    }
+  },
   "devDependencies": {
     "@babel/preset-env": "7.26.0",
     "@chromatic-com/storybook": "3.2.4",
@@ -125,7 +133,7 @@
     "@uniswap/default-token-list": "11.19.0",
     "@uniswap/eslint-config": "workspace:^",
     "@vercel/og": "0.5.8",
-    "@wagmi/core": "2.10.2",
+    "@wagmi/core": "2.17.2",
     "babel-jest": "29.7.0",
     "browser-cache-mock": "0.1.7",
     "concurrently": "8.2.2",
@@ -181,6 +189,7 @@
     "@datadog/browser-logs": "5.20.0",
     "@datadog/browser-rum": "5.23.3",
     "@datadog/browser-rum-react": "6.3.0",
+    "@getgrowly/suite": "1.0.2",
     "@graphql-codegen/cli": "3.3.1",
     "@graphql-codegen/client-preset": "3.0.1",
     "@graphql-codegen/typescript": "3.0.4",
@@ -283,12 +292,15 @@
     "utilities": "workspace:^",
     "uuid": "9.0.0",
     "video-extensions": "1.2.0",
-    "viem": "2.x",
-    "wagmi": "2.9.3",
+    "viem": "2.28.1",
+    "wagmi": "2.15.3",
     "wcag-contrast": "3.0.0",
     "web-vitals": "2.1.4",
     "xml2js": "0.6.2",
     "zone.js": "0.12.0"
+  },
+  "resolutions": {
+    "viem": "2.28.1"
   },
   "engines": {
     "npm": "please-use-yarn",
