--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettier-plugin-organize-imports": "3.2.4",
     "syncpack": "8.5.14",
     "turbo": "1.13.4",
-    "turbo-ignore": "1.11.3"
+    "turbo-ignore": "1.11.3",
+    "viem": "2.28.1"
   },
   "engines": {
     "node": "=22.13.1",
@@ -107,7 +108,7 @@
     "resolve": "1.22.4",
     "semver": "7.5.2",
     "typescript": "5.3.3",
-    "viem": "2.22.9",
+    "viem": "2.28.1",
     "xml2js": "0.5.0",
     "yaml": "2.2.2",
     "webpack": "5.90.0",
